[gd_scene load_steps=6 format=3 uid="uid://c3n7df1giijoi"]

[ext_resource type="Script" path="res://pickups/GoblinEar.gd" id="1_xk7jo"]
[ext_resource type="PackedScene" uid="uid://cv6yvjh1p5113" path="res://models/goblin_ear.glb" id="2_1070h"]
[ext_resource type="Script" path="res://units/components/HeightComponent.gd" id="3_pfjst"]
[ext_resource type="Script" path="res://units/components/RotationComponent.gd" id="4_fk84e"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hbbr7"]
radius = 1.5

[node name="GoblinEar" type="Area3D"]
collision_layer = 0
monitoring = false
monitorable = false
script = ExtResource("1_xk7jo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_hbbr7")

[node name="goblin_ear" parent="." instance=ExtResource("2_1070h")]
visible = false

[node name="GoblinEarLandingPoint" type="Node3D" parent="."]
script = ExtResource("3_pfjst")
offset = 1.0
once = true

[node name="RotationComponent" type="Node" parent="."]
script = ExtResource("4_fk84e")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
